# ENCRYPTED_BIN_CREATOR

./: .coverage  .flake8  .gitignore  README.md  README.mk  pyproject.toml
.github/workflows/: build_and_release.yaml  ci.yml  deploy_app_page.yml
images/: Bez nazwy.xcf
install_scripts/: build.bat  build.sh  requirements.txt
src/bin_creator/: __init__.py  __main__.py
src/bin_creator.egg-info/: SOURCES.txt  entry_points.txt  requires.txt
src/bin_creator/cli/: __init__.py  parser.py  utils.py  validators.py
src/bin_creator/core/: __init__.py  builder.py  config.py
src/encrypt_bin/: __main__.py
src/encrypt_bin/cli/: parser.py  utils.py
src/encrypt_bin/core/: builder.py  config.py
src/encrypt_bin/gui/: main.py
tests/: test_builder.py  test_builder_edge.py  test_cli_parser.py  test_config.py  test_main.py  test_main_edge.py  test_utils.py  test_utils_validators.py  test_utils_validators_edge.py  test_validators.py
